--- a/style.css
+++ b/style.css
@@ -1,21 +1,152 @@
+body {
+  max-width: 1080px;
+  margin: 2em auto;
+  text-align: center;
+  background-color: #4c5c68;
+}
 
-#container{
+#player2,
+#player1,
+#btnPlayer2,
+#btnPlayer1,
+#reload {
+  font-family: 'Gloria Hallelujah';
+  font-size: 22px;
+}
+
+.grid,
+body {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 22px;
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.6);
+}
+
+h1 {
+  font-size: 3.5em;
+}
+
+#position {
+  width: 300px;
+  margin: 2em auto;
+}
+
+#container {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+  margin: 2em auto;
+}
+
+.grid {
+  background-color: transparent;
+  border: 0.5px solid #fff;
+  align-items: center;
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.6);
+  font-size: 65px;
+  padding: 0px 10px 50px 15px;
+}
+
+#output {
+  margin-top: 1em;
+  font-size: 1.5em;
+}
+
+#player1 {
+  border: none;
+}
+
+#player2 {
+  border: none;
+}
+
+#btnPlayer2 {
+  margin-left: 2em;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#btnPlayer1 {
+  margin-left: 2em;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#reload {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#reload:hover,
+#btnPlayer2:hover,
+#btnPlayer1:hover {
+  box-shadow: 0 0 4px rgba(255, 255, 255, 0.6);
+}
+
+@media only screen and (max-width: 960px) {
+  #grid-container {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px;
-    margin-top: 4em;
-    /* width: 260px;
-    height: 260px;
-    */
-    }
+    grid-template-rows: 150px 50px 50px 50px 50px auto 50px;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    row-gap: 20px;
+    grid-template-areas:
+      'h1'
+      'player1'
+      'player1btn'
+      'player2'
+      'player2btn'
+      'tictactoe'
+      'output'
+      'refresh';
+  }
+  body {
+    margin-top: 10px;
+  }
 
-.grid{
-    
-    background-color: #fff;
-    border: 0.5px solid grey;
-    align-items: center;
-    font-size: 75px;
-    padding: 5px 10px 30px 25px;
-    font-family: Arial, Helvetica, sans-serif;
-    }
+  h1 {
+    font-size: 2.5em;
+    grid-area: h1;
+  }
 
+  #player1 {
+    grid-area: player1;
+    text-align: center;
+    width: 325px;
+  }
+
+  #btnPlayer1 {
+    grid-area: player1btn;
+    width: 330px;
+    margin-left: 0em;
+  }
+
+  #player2 {
+    grid-area: player2;
+    text-align: center;
+    width: 325px;
+  }
+
+  #btnPlayer2 {
+    grid-area: player2btn;
+    margin-left: 0px;
+    width: 330px;
+  }
+
+  #position {
+    grid-area: tictactoe;
+    margin-bottom: -10px;
+    margin-top: -10px;
+  }
+
+  #output {
+    grid-area: output;
+    margin-top: -20px;
+  }
+
+  #reload {
+    grid-area: refresh;
+    height: 50px;
+    width: 360px;
+  }
+}
